# sonar-images

./: CMakeLists.txt  DetectModelObject.ipynb  README.md  sonar_detection.ipynb  sonar_mine_detection.py
.ipynb_checkpoints/: DetectModelObject-checkpoint.ipynb
map/: xyz1.txt
matlab/3D-IQA/Experiment/SSEQ/: example.m
matlab/3D-IQA/FR-3D-IQA/code_for_FR/: test.m
matlab/3D-SIR/: 3d.tif  cloud.m  map.m  map.stl
object_detection/dataset/SeabedObjects-KLSG--II/plane/: plane-001.xml.txt  plane-002.xml.txt  plane-003.xml.txt  plane-004.xml.txt  plane-005.xml.txt  plane-006.xml.txt  plane-007.xml.txt  plane-008.xml.txt  plane-009.xml.txt  plane-010.xml.txt  plane-011.xml.txt  plane-012.xml.txt  plane-013.xml.txt  plane-014.xml.txt  plane-015.xml.txt  (+51 more)
script/: model_3d.py  test.py
src/: Doxygen  basic-process.h  data.h  filter.cpp  filter.h  fourier.cpp  fourier.h  main.cpp  map.cpp  map.h  parameter.h
src/Documentation/html/: annotated.html  classes.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_a69789924a3e8e499d8251390181c41b.html  dir_c7dc607b8f67e0a55c1ea066f9f774d2.html  dir_ed0dc81eecf617252f9d273cf7f43c00.html  dir_efc364fbb52cb214cd52311dbd3cc454.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html
src/Documentation/latex/: annotated.tex  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.tex  dir_a69789924a3e8e499d8251390181c41b.tex  dir_c7dc607b8f67e0a55c1ea066f9f774d2.tex  dir_ed0dc81eecf617252f9d273cf7f43c00.tex  dir_efc364fbb52cb214cd52311dbd3cc454.tex  files.tex  refman.tex
(+134 files in other folders)
